--- a/roles/ansible-role-prerequisites/meta/main.yml
+++ b/roles/ansible-role-prerequisites/meta/main.yml
@@ -1,5 +1,5 @@
 galaxy_info:
-  author: Zulfiya Zhumanazarova
+  author: Islam Kambarov
   description: A simple role to install prerequisites
   company: Bosch
   license: MIT
